# paarvai-mcp

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  SETUP.md  package-lock.json  pyproject.toml
examples/: config.json  queries.md
scripts/: test-local.sh
src/paarvai_mcp/: __init__.py  __main__.py  client.py  config.py  server.py  tools.py
tests/: __init__.py  test_client.py
